# Luca-Lattuca-Final-Work

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.nl.md  LICENSE  MAINTENANCE.md  MAINTENANCE.nl.md  README.md  README.nl.md
musinfo/: .gitignore  package-lock.json  package.json
musinfo/AI_image_generation/: generate_image.py  lookup.json  ndi_test.py  prompt_generator.py
musinfo/backend/config/: analysers.json  instruments.json  models.json  performance.json
musinfo/backend/tests/: broadcaster_sync_test.py  capture_test.py  osc_playback.py  osc_recorder.py  osc_sniffer_9100.py  sync_results.txt  td_osc_monitor.py  test_osc.py
musinfo/backend/windows/: broadcaster.py  capture.py  capture_test.py  config.json  midi_capture.py  windows_receiver.py
musinfo/backend/windows/analysers/: bpm_analyser.py  midi_harmony_analyser.py  pitch_analyser.py  tempo_analyser.py  windows_test_analyser.py
musinfo/backend/wsl/: receiver.py  wsl_receiver.py  wsl_receiver_heavy.py
musinfo/backend/wsl/analysers/: mood_analyser.py  (+11 more)
musinfo/docs/: about.html  documentation.md  index.html
musinfo/sessions/: Ableton_Session.json  Norah_Jones_Don't_Know_Why.json  Vocals.json  ableton_session.json  ableton_sessions.json  backing track.json  backing_track_focusrite.json  session1.json
musinfo/src/: App.css  App.jsx  main.jsx
musinfo/src-tauri/: Cargo.toml  tauri.conf.json
musinfo/src-tauri/src/: lib.rs  main.rs  menu.rs
musinfo/src/contexts/: SessionContext.jsx
musinfo/src/utils/: roleUtils.js
touchdesigner/: Harmonic_Visuals.toe  Visual_Resonance.toe  Visual_Resonance_last.toe
(+41 files in other folders)
